what's app tada animation fixed and contact page alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -551,43 +551,51 @@
 .contact-module-first-div-map-align{
     height: 500px; 
     margin-left:2px; 
-    margin-right:10px; 
+    margin-right:3px; 
     margin-top: 20px; 
     margin-bottom: -90px;
+    flex: 4;
 }
 .contact-module-second-div-map-align{
     height: 500px;
     margin-left:2px;  
-    margin-right:10px;  
-    margin-bottom:-90px;
+    margin-right:3px;  
+    margin-bottom:-100px;
+    flex: 4;
 }
 .contact-module-third-div-map-align{
     height: 500px; 
     margin-left:2px;  
-    margin-right:10px; 
-    margin-bottom: -60px;
+    margin-right:3px; 
+    margin-bottom: -70px;
+    flex: 4;
 }
 .contact-module-first-div-content-grid-align{
     height: 400px; 
     width: 300px;  
-    margin-left: 25px; 
+    margin-left: 10px; 
+    margin-right: 10px; 
     padding-top: 100px; 
     margin-top: 20px;
+    flex: 1;
 }
 .contact-module-second-div-content-grid-align{
     height: 400px; 
     width:300px;
-    margin-left: 25px;
-    margin-right: 25px; 
+    margin-left: 13px;
+    margin-right: 13px; 
     padding-top: 100px; 
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    flex: 1;
 }
 .contact-module-third-div-content-grid-align{
     height: 400px;
     width:300px;
-    margin-left:25px; 
+    margin-left: 13px; 
+    margin-right: 13px;
     padding-top: 100px; 
-    margin-bottom: 20px;
+    margin-bottom:15px;
+    flex: 1;
 }
 
 .btn-lg-square-whatsapp {
@@ -599,7 +607,21 @@
 }
 
 .btn-lg-square-whatsapp:hover {
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5); 
-    transform: scale(1.5);
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
 }
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
